--- a/GpuMovingCameraBS/GpuMovingCameraBS.vcxproj
+++ b/GpuMovingCameraBS/GpuMovingCameraBS.vcxproj
@@ -69,6 +69,8 @@
     <ClInclude Include="MRFOptimize.h" />
     <ClInclude Include="PictureHandler.h" />
     <ClInclude Include="RandUtils.h" />
+    <ClInclude Include="RegionMerging.h" />
+    <ClInclude Include="RTBackgroundSubtractor.h" />
     <ClInclude Include="SLIC.h" />
     <ClInclude Include="SparseMatrixSolverHelper.h" />
     <ClInclude Include="SparseSolver.h" />
@@ -98,6 +100,8 @@
     <ClCompile Include="MotionEstimate.cpp" />
     <ClCompile Include="MRFOptimize.cpp" />
     <ClCompile Include="PictureHandler.cpp" />
+    <ClCompile Include="RegionMerging.cpp" />
+    <ClCompile Include="RTBackgroundSubtractor.cpp" />
     <ClCompile Include="SLIC.cpp" />
     <ClCompile Include="SparseSolver.cpp" />
     <ClCompile Include="SuperpixelComputer.cpp" />
@@ -207,6 +211,7 @@
     <IncludePath>$(VCInstallDir)include;$(VCInstallDir)atlmfc\include;$(WindowsSdkDir)include;$(FrameworkSDKDir)\include;%(AdditionalIncludeDirectories);$(CudaToolkitIncludeDir);$(CULA_INC_PATH);</IncludePath>
     <OutDir>$(SolutionDir)\Release\</OutDir>
     <IntDir>Release\</IntDir>
+    <TargetName>RTBS</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -308,6 +313,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
