--- a/SubSenseBS/SubSenseBS.vcxproj
+++ b/SubSenseBS/SubSenseBS.vcxproj
@@ -74,6 +74,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <TargetName>MovieMaker</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='OpencvR|Win32'">
     <LinkIncremental>false</LinkIncremental>
