--- a/GpuMovingCameraBS/GpuMovingCameraBS.vcxproj.filters
+++ b/GpuMovingCameraBS/GpuMovingCameraBS.vcxproj.filters
@@ -143,6 +143,9 @@
     <ClInclude Include="RegionMerging.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="ImageWarping.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="WarpBackgroundSubtractor.cpp">
