--- a/GpuMovingCameraBS/GpuMovingCameraBS.vcxproj.filters
+++ b/GpuMovingCameraBS/GpuMovingCameraBS.vcxproj.filters
@@ -185,6 +185,9 @@
     <ClInclude Include="LSE.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Dijkstra.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="WarpBackgroundSubtractor.cpp">
@@ -266,6 +269,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="LSE.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Dijkstra.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
