create a new project for image saliency detection, move to cuda 7.0

--- a/GpuMovingCameraBS/GpuMovingCameraBS.vcxproj.filters
+++ b/GpuMovingCameraBS/GpuMovingCameraBS.vcxproj.filters
@@ -262,9 +262,6 @@
     <ClCompile Include="BlockWarping.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="ASAPWarping.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="RTBackgroundSubtractor.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
@@ -276,6 +273,9 @@
     </ClCompile>
     <ClCompile Include="Dijkstra.cpp">
       <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="ASAPWarping.cpp">
+      <Filter>头文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
