working on region objectness

--- a/ImageSaliency/ImageSaliency.vcxproj
+++ b/ImageSaliency/ImageSaliency.vcxproj
@@ -171,6 +171,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="..\GpuMovingCameraBS\SLIC.h" />
     <ClInclude Include="..\GpuMovingCameraBS\timer.h" />
     <ClInclude Include="ImageFocusness.h" />
+    <ClInclude Include="RegionObjectness.h" />
     <ClInclude Include="Saliency.h" />
   </ItemGroup>
   <ItemGroup>
@@ -183,6 +184,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClCompile Include="..\GpuMovingCameraBS\SuperpixelComputer.cpp" />
     <ClCompile Include="..\GpuMovingCameraBS\timer.cpp" />
     <ClCompile Include="ImageFocusness.cpp" />
+    <ClCompile Include="RegionObjectness.cpp" />
     <ClCompile Include="Saliency.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
