--- a/ImageSaliency/ImageSaliency.vcxproj.filters
+++ b/ImageSaliency/ImageSaliency.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="ImageFocusness.h">
       <Filter>Header</Filter>
     </ClInclude>
+    <ClInclude Include="RegionObjectness.h">
+      <Filter>Header</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="kernel.cu">
@@ -89,6 +92,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="ImageFocusness.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="RegionObjectness.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
