--- a/.gitignore
+++ b/.gitignore
@@ -74,13 +74,6 @@ packages/
 *.png
 *.avi
 *.pgm
-GpuSubsenseM/vc100.pdb
-<<<<<<< HEAD
-
-GpuSubsenseM/vc100.pdb
-=======
-GpuSubsenseM/vc100.pdb
->>>>>>> 0847b8b3ab27bb5586804155c5f9e74eaa6fb02d
 
 *.txt
 *.pdb
@@ -94,3 +87,4 @@ GpuSubsenseM/vc100.pdb
 GpuSubsenseM/GpuSubsenseM.rar.baiduyun.uploading.cfg
 *.bmp
 *.bat
+*.deps
