move regionmerging.cpp.h to gpumovingcamearabs

--- a/ImageSaliency/ImageSaliency.vcxproj
+++ b/ImageSaliency/ImageSaliency.vcxproj
@@ -171,10 +171,10 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="..\GpuMovingCameraBS\GpuSuperpixel.h" />
     <ClInclude Include="..\GpuMovingCameraBS\graph.h" />
     <ClInclude Include="..\GpuMovingCameraBS\LBP.h" />
-    <ClInclude Include="..\GpuMovingCameraBS\RegionMerging.h" />
     <ClInclude Include="..\GpuMovingCameraBS\SLIC.h" />
     <ClInclude Include="..\GpuMovingCameraBS\timer.h" />
     <ClInclude Include="ImageFocusness.h" />
+    <ClInclude Include="RegionMerging.h" />
     <ClInclude Include="RegionObjectness.h" />
     <ClInclude Include="Saliency.h" />
   </ItemGroup>
@@ -183,11 +183,11 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClCompile Include="..\GpuMovingCameraBS\Dijkstra.cpp" />
     <ClCompile Include="..\GpuMovingCameraBS\GpuSuperpixel.cpp" />
     <ClCompile Include="..\GpuMovingCameraBS\PictureHandler.cpp" />
-    <ClCompile Include="..\GpuMovingCameraBS\RegionMerging.cpp" />
     <ClCompile Include="..\GpuMovingCameraBS\SLIC.cpp" />
     <ClCompile Include="..\GpuMovingCameraBS\SuperpixelComputer.cpp" />
     <ClCompile Include="..\GpuMovingCameraBS\timer.cpp" />
     <ClCompile Include="ImageFocusness.cpp" />
+    <ClCompile Include="RegionMerging.cpp" />
     <ClCompile Include="RegionObjectness.cpp" />
     <ClCompile Include="Saliency.cpp" />
   </ItemGroup>
