--- a/GpuMovingCameraBS/GpuMovingCameraBS.vcxproj
+++ b/GpuMovingCameraBS/GpuMovingCameraBS.vcxproj
@@ -246,7 +246,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
-    <TargetName>RTBS</TargetName>
+    <TargetName>TestFeaturesRefine</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <TargetName>GpuSubsenseM</TargetName>
