--- a/GpuMovingCameraBS/GpuMovingCameraBS.vcxproj
+++ b/GpuMovingCameraBS/GpuMovingCameraBS.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -79,6 +79,7 @@
     <ClInclude Include="LBSP.h" />
     <ClInclude Include="LinkedBlockList.h" />
     <ClInclude Include="LSE.h" />
+    <ClInclude Include="MBD.h" />
     <ClInclude Include="MeanShift.h" />
     <ClInclude Include="MotionEstimate.h" />
     <ClInclude Include="MRFOptimize.h" />
@@ -118,6 +119,7 @@
     <ClCompile Include="LSE.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="maxflow.cpp" />
+    <ClCompile Include="MBD.cpp" />
     <ClCompile Include="MeanShift.cpp" />
     <ClCompile Include="MotionEstimate.cpp" />
     <ClCompile Include="MRFOptimize.cpp" />
